rust-examples/tests/compile-fail/Rule_8_11.rs
#![deny(clippy)]
#[deny(warnings)]

static arr: [i32] = [];

fn main() {
    println!("{}", arr);
}
